# Debiasing-Text-With-Style-Transfer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
data/: bart_evaluated.csv  bart_predictions.csv  bart_predictions.txt  baseline_evaluated.csv  baseline_predictions.csv  data_for_eval.csv  evaluated.csv
notebooks/: EDA.ipynb  Untitled.ipynb  analysis_evaluation.ipynb  bart_evaluation_metrics.ipynb  bart_finetuned.ipynb  bart_inference.ipynb  baseline_eval.ipynb  baseline_evaluation_metrics.ipynb  baseline_model.ipynb  bert_finetuned.ipynb  bert_inference.ipynb  bert_model.ipynb  data_preprocessing.ipynb  evaluation_metrics.ipynb
notebooks/evaluation/: analysis_evaluation.ipynb  bart_evaluation_metrics.ipynb  baseline_evaluation_metrics.ipynb
notebooks/inference/: bart_inference.ipynb  bert_inference.ipynb
notebooks/modeling/: bart_finetuned.ipynb  baseline_model.ipynb  bert_finetuned.ipynb
notebooks/preprocessing/: data_preprocessing.ipynb
src/: data_preprocessing.ipynb
utils/: data.py  eval.py
