[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "debiasing-text-with-style-transfer"
version = "0.1.0"
description = "A debiasing package that uses style transfer to remove bias from textual data."
authors = ["Keshvi Gupta <keshvi2298@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "*"
scipy = "*"
numpy = "*"
jupyter = "^1.0.0"
swifter = "*"
scikit-learn = "^1.3.0"
transformers = "*"
torch = "^1.9.0"
datasets = "*"
regex = "*"
#spacy = "^3.7.0"
#en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl" } 
nltk = "*"
matplotlib = "*"
seaborn = "*"
wordcloud = "*"
plotly = "*"
gensim = "*"
transformers-interpret = "^0.10.0"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "*"
torchvision = "*"
torchtext = "*"